# ping-core

./: .gitignore  CMakeLists.txt  README.md
cmake/: PingProto.cmake
include/ping/: Ping.hpp
proto/: chat.proto  message.proto  message_extra.proto  message_state.proto
src/ping/: Ping.cpp
test/: CMakeLists.txt  api_test.cpp
